# satoshi-guard

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  test.py
ci/docker/: Dockerfile
core/shared/interfaces/: __init__.py
src/: __main__.py  app.py
src/config/: adapters.py  local.yml  models.py  port.py  ports.py
src/config/adapters/: config.py
src/config/files/: local.yml
src/controller/: http.py
src/controllers/: http.py
src/infrastructure/database/: db_connection.py
src/infrastructure/database/tables/: users.py
src/modules/wallets/adapters/: wallets_router.py
