[tool.poetry]
name = "Satoshi-guard"
version = "0.1.0"
description = "Crypto custody solution."
authors = ["Sebastian Wdowiarz"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
uvicorn = "0.31.1"
pyyaml = "6.0.1"
sqlalchemy = "2.0.28"
sqlalchemy-utils = "^0.41.1"
alembic = "1.13.1"


[tool.poetry.group.dev.dependencies]
pre-commit-hooks = "4.5.0"
pre-commit = "3.6.2"

[tool.black]
line-length = 110
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
